fix: disable automatic zoom on activating input on mobile

--- a/server/assets/app/app.css
+++ b/server/assets/app/app.css
@@ -40,6 +40,15 @@ a {
   outline: unset;
 }
 
+/* This fixes an issue on iOS when an element is zoomed in when selected */
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  select,
+  textarea,
+  input {
+    font-size: 16px;
+  }
+}
+
 .tuist-widget-link {
   text-decoration: unset;
 
